              10.10 (October 2002).

              ppmtopict: Fix unconditional crash.  Introduced in 
              Netpbm 10.52 (September 2010).

              pcdovtoppm: Fix crash due to invalid operator == on some
              systems.  Always broken (pcdovtoppm was new sometime between
              Netpbm 9.25 (March 2002) and Netpbm 10.11 (Februrary 2010)).

              Build: provide means of setting the default search path for
              rgb.txt color database via config.mk.

              Build: fix bug which prevents JBIG converters from building with
              internal JBIG library.  Introduced in 10.67.00.

              Build: fix bug which makes build of Ppmsvga fail (which is
              attempted only on a system with libvga).  Introduced in Netpbm
              10.63 (June 2013)

              Build: fix build failure in an environment that does not have
              __inline .  Introduced some time between Netpbm 10.26
              (January 2005) and Netpbm 10.35 (August 2006).

              Build: fix build failure on SCO OpenServer due to SIGURG not
              existing.  Broken in Netpbm 10.49 (December 2009).

              Build: Declare _XOPEN_SOURCE >= 500 in source files that use
              strdup.

              Build: fix compile failure due to use of reserved word
              'stdout'.

              Build with 'installosf': Fix crash due to invalid operator ==
              on some systems.

14.06.29 BJH  Release 10.67.00

              sgitopnm: add ability to convert 2-channel SGI image.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              sgitopnm: add ability to work with non-seekable input (e.g. a
              pipe).  Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pamtotiff: add -output, use Standard Output normally (before, it
              had to be seekable.  Also, you could do an append operation to